--- a/index.html
+++ b/index.html
@@ -4,33 +4,71 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Evan Palmer | Web Developer | Code Enthusiast</title>
+    <title>Evan Palmer | Developer | Code Enthusiast</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li class="nav-item"><a href="#section-1" class="nav-link" role="button">NavLink</a></li><!--
-             --><li class="nav-item"><a href="#section-2" class="nav-link" role="button">NavLink</a></li><!--
-             --><li class="nav-item"><a href="#section-1" class="nav-link" role="button">NavLink</a></li><!--
-             --><li class="nav-item"><a href="#section-2" class="nav-link" role="button">NavLink</a></li>
-            </ul>
-        </nav>
+        <section>
+            <nav>
+                <ul>
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link" role="button">
+                            <button class="nav-btn">Home</button>
+                        </a>
+                    </li><!--
+                 --><li class="nav-item">
+                        <a href="#projects" class="nav-link" role="button">
+                            <button class="nav-btn">Projects</button>
+                        </a>
+                    </li><!--
+                 --><li class="nav-item">
+                        <a href="#about" class="nav-link" role="button">
+                            <button class="nav-btn">About</button>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main>
         <section>
-            <div class="jumbo">
+            <div id="section-1" class="jumbo">
                 <h1 class="main-heading">Welcome to my portfolio website</h1>
                 <p class="main-description txt-center">
                     Here you'll find a sampling of my work and information about me.
                 </p>
+                <div class="social-wrapper">
+                    <ul>
+                        <li>
+                            <a href="https://twitter.com/__evanpalmer__" target="_blank">
+                                <button id="twitter" class="social-btn"><i class="fa fa-twitter"></i>Twitter</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/palmerev" target="_blank">
+                                <button id="github" class="social-btn"><i class="fa fa-github"></i>Github</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/evanpalmer1" target="_blank">
+                                <button id="linkedin" class="social-btn"><i class="fa fa-linkedin"></i>LinkedIn</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.freecodecamp.com/palmerev">
+                                <button id="free-code-camp" class="social-btn"><i class="fa fa-fire"></i>Free Code Camp</button>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section>
-            <div class="jumbo">
+            <div id="section-2" class="jumbo">
                 <h1>This is the next-section</h1>
                 <p class="txt-center">
                     This section is probably full of projects.
@@ -39,7 +77,7 @@
                     <li class="project">
                         <div class="item-wrapper">
                             <a href="http://placekitten.com" class="project-link">
-                                <img src="http://placekitten.com/g/250/250" alt="project-img-1" />
+                                <img src="images/thumbnailraiseeffect.png" alt="project-img-1" />
                             </a>
                             <div class="caption">
                                 Caption for the project.
@@ -80,16 +118,21 @@
             </div>
         </section>
         <section>
-            <div class="jumbo">
+            <div id="section-3" class="jumbo">
                 <h1>This is the next-next section</h1>
                 <p class="txt-center">
                     This section will probably have information about me.
                 </p>
-
+                <div class="about">
+                    <p class="bio">
+                        This is where my bio will go. It'll talk about me and how much I love to code. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <div class="pic-wrapper">
+                        <img src="images/or_city_cropped.jpg" alt="Picture of Evan Palmer" />
+                    </div>
+                </div>
             </div>
         </section>
     </main>
-
 </body>
-
 </html>
