--- a/index.html
+++ b/index.html
@@ -1,138 +1,121 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Evan Palmer | Developer | Code Enthusiast</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/normalize.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
-</head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Evan Palmer's software / web development portfolio">
+    <meta name="author" content="Evan Palmer">
+    <title>Evan Palmer | Developer | Nerd | Code Enthusiast</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    <!-- Custom styles for this page -->
+    <link href="styles.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
 <body>
-    <header>
-        <section>
-            <nav>
-                <ul>
-                    <li class="nav-item">
-                        <a href="#home" class="nav-link" role="button">
-                            <button class="nav-btn">Home</button>
-                        </a>
-                    </li><!--
-                 --><li class="nav-item">
-                        <a href="#projects" class="nav-link" role="button">
-                            <button class="nav-btn">Projects</button>
-                        </a>
-                    </li><!--
-                 --><li class="nav-item">
-                        <a href="#about" class="nav-link" role="button">
-                            <button class="nav-btn">About</button>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </section>
-    </header>
-    <main>
-        <section>
-            <div id="section-1" class="jumbo">
-                <h1 class="main-heading">Welcome to my portfolio website</h1>
-                <p class="main-description txt-center">
-                    Here you'll find a sampling of my work and information about me.
-                </p>
-                <div class="social-wrapper">
-                    <ul>
-                        <li>
-                            <a href="https://twitter.com/__evanpalmer__" target="_blank">
-                                <button id="twitter" class="social-btn"><i class="fa fa-twitter"></i>Twitter</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/palmerev" target="_blank">
-                                <button id="github" class="social-btn"><i class="fa fa-github"></i>Github</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/evanpalmer1" target="_blank">
-                                <button id="linkedin" class="social-btn"><i class="fa fa-linkedin"></i>LinkedIn</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://www.freecodecamp.com/palmerev">
-                                <button id="free-code-camp" class="social-btn"><i class="fa fa-fire"></i>Free Code Camp</button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div id="section-2" class="jumbo">
-                <h1>This is the next-section</h1>
-                <p class="txt-center">
-                    This section is probably full of projects.
-                </p>
-                <ul  class="projects">
-                    <li class="project">
-                        <div class="item-wrapper">
-                            <a href="http://placekitten.com" class="project-link">
-                                <img src="images/thumbnailraiseeffect.png" alt="project-img-1" />
-                            </a>
-                            <div class="caption">
-                                Caption for the project.
-                            </div>
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="item-wrapper">
-                            <a href="http://placekitten.com" class="project-link">
-                                <img src="http://placekitten.com/g/250/250" alt="project-img-1" />
-                            </a>
-                            <div class="caption">
-                                Caption for the project.
-                            </div>
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="item-wrapper">
-                            <a href="http://placekitten.com" class="project-link">
-                                <img src="http://placekitten.com/g/250/250" alt="project-img-1" />
-                            </a>
-                            <div class="caption">
-                                Caption for the project.
-                            </div>
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="item-wrapper">
-                            <a href="http://placekitten.com" class="project-link">
-                                <img src="http://placekitten.com/g/250/250" alt="project-img-1" />
-                            </a>
-                            <div class="caption">
-                                Caption for the project.
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <section>
-            <div id="section-3" class="jumbo">
-                <h1>This is the next-next section</h1>
-                <p class="txt-center">
-                    This section will probably have information about me.
-                </p>
-                <div class="about">
-                    <p class="bio">
-                        This is where my bio will go. It'll talk about me and how much I love to code. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <div class="pic-wrapper">
-                        <img src="images/or_city_cropped.jpg" alt="Picture of Evan Palmer" />
+
+<div class="full-width section">
+    <!-- Static navbar -->
+    <nav id="home" class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse navbar-right">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    <div class="container text-center intro-bio">
+        <h1>Hello! I'm Evan.</h1>
+        <p>I write code for the thrill of it.</p>
+        <p>I love the modern web and the challenges it brings.</p>
+        <p>I think building things with code is almost like having superpowers.</p>
+    </div>
+</div>
+
+<div class="container section">
+    <div id="projects">
+        <h3 class="text-center">Projects</h3>
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="" alt="The Raise Effect logo" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
-</body>
+
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="" alt="The Raise Effect logo" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4">
+                <div class="thumbnail">
+                    <img src="" alt="The Raise Effect logo" />
+                    <div class="caption">
+                        <h4>Raise Effect API</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-default" role="button">View Site</a>
+                            <a href="#" class="btn btn-default" role="button">View Source</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<p>
+    Photo source:
+    <a href="https://pixabay.com/en/red-panda-sleeps-rest-cute-tired-1194504/">
+        https://pixabay.com/en/red-panda-sleeps-rest-cute-tired-1194504/
+    </a>
+</p>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="main.js" charset="utf-8"></script>
+  </body>
 </html>
