--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Evan Palmer's software / web development portfolio">
+    <meta name="description" content="Evan Palmer's software and web development portfolio">
     <meta name="author" content="Evan Palmer">
     <title>Evan Palmer | Developer | Nerd | Code Enthusiast</title>
     <!-- Latest compiled and minified CSS -->
