add some real project thumbnails

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="" alt="The Raise Effect logo" />
+                    <img src="thumbnailraiseeffect.png" alt="The Raise Effect logo" class="img-responsive" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
@@ -71,9 +71,9 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="" alt="The Raise Effect logo" />
+                    <img src="bluepython.svg" alt="The PyDX blue python logo" />
                     <div class="caption">
-                        <h4>Raise Effect API</h4>
+                        <h4>Speaker at PyDX 2015</h4>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
@@ -87,7 +87,7 @@
 
             <div class="col-xs-12 col-md-4">
                 <div class="thumbnail">
-                    <img src="" alt="The Raise Effect logo" />
+                    <img class="intramusical-thumbnail" src="im_exercise.jpg" alt="Screenshot of intramusical exercise page" />
                     <div class="caption">
                         <h4>Raise Effect API</h4>
                         <p>
