change background image to body instead of section, update photo credit

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     </div>
 </div>
 <p>
-    Photo source:
-    <a href="https://pixabay.com/en/red-panda-sleeps-rest-cute-tired-1194504/">
-        https://pixabay.com/en/red-panda-sleeps-rest-cute-tired-1194504/
+    Photo by Scott Webb, source:
+    <a href="https://unsplash.com/photos/R5fIqR8nPu0">
+        https://unsplash.com/photos/R5fIqR8nPu0
     </a>
 </p>
     <!-- Bootstrap core JavaScript
